tests/expected_invalid_parse_missing_function_body.diag.out
<input>:3:1: error: expected function body block after signature
    public fn after() -> Int {
    ^^^^^^
